--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 
     <section class="section section-faq" id="faq">
         <div class="container">
-            <h2>FAQ</h2>
+            <h2 id="faqTitle">FAQ</h2>
 
             <div class="faq-items flex">
                 <div class="faq-item">
