--- a/index.html
+++ b/index.html
@@ -12,55 +12,49 @@
     <title>God of war</title>
 </head>
 <body>
-  <!-- <div class="mobile-burger-menu ul-hidden" id="mobile-menu">
-    <div class="mobile-burger-menu-top">
-        <div class="mobile-burger-menu-top-burger-mobile" id="mobile-burger-menu-top-burger-mobile">
-            <div class="mobile-burger-menu-top-burger-mobile__burger-line"></div>
-            <div class="mobile-burger-menu-top-burger-mobile__burger-line"></div>
+  <div class="mobile-burger-menu ul-hidden" id="mobile-burger-menu">
+        <div class="mobile-burger-menu__button" id="burger-menu1">
+            <span></span>
         </div>
-        <span class="mobile-burger-menu-top-blue">Your<span class="mobile-burger-menu-top-blue__red">.logo</span></span>
-        <img class="mobile-burger-menu-top__icon" src="/image/icon.svg" alt="">
-    </div>
-
     <ul class="mobile-burger-menu-ul">
-        <li class="mobile-burger-menu-ul-li"><a class="header-nav-li__a" href="/LastMinuteDeals.html">Last Minute Deals</a></li>
-        <li class="mobile-burger-menu-ul-li"><a class="header-nav-li__a" href="#">Blog</a></li>
-        <li class="mobile-burger-menu-ul-li"><a class="header-nav-li__a" href="#">About us</a></li>
-        <li class="mobile-burger-menu-ul-li"><a class="header-nav-li__a" href="#">Contacts</a></li>
-    </ul>
-
-    <div class="mobile-burger-menu-info">
-        <span class="mobile-burger-menu-info__currency">$</span>
-        <span class="mobile-burger-menu-info__lang">EN</span>
+            <li><a class="mobile-burger-menu__li menu-link" href="#editions">editions</a></li>
+            <li><a class="mobile-burger-menu__li menu-link" href="#controller">controller</a></li>
+            <li><a class="mobile-burger-menu__li menu-link" href="#about">about</a></li>
+            <li><a class="mobile-burger-menu__li menu-link" href="#explore">explore</a></li>
+            <li><a class="mobile-burger-menu__li menu-link" href="#news">news</a></li>
+            <li><a class="mobile-burger-menu__li menu-link" href="#faq">faq</a></li>
+            <li><div class="mobile-burger-menu__li lang1">
+                <span class="current-lang">english</span>
+                <svg id="svg" xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
+                    <g clip-path="url(#clip0_12_93)">
+                      <path d="M0.159766 3.67328L5.61446 9.15492C5.71671 9.25772 5.85547 9.31546 6.00013 9.31546C6.14482 9.31546 6.28355 9.25768 6.38584 9.15488L11.8402 3.67325C12.0533 3.45917 12.0533 3.11211 11.8402 2.89803C11.6273 2.68399 11.2819 2.68396 11.0689 2.89803L6.00013 7.99205L0.931148 2.89803C0.824638 2.79099 0.685039 2.73749 0.545439 2.73749C0.405838 2.73749 0.266238 2.79099 0.15973 2.89807C-0.0532522 3.11214 -0.0532522 3.45921 0.159766 3.67328Z" fill="white"/>
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_12_93">
+                        <rect width="12" height="12.0596" fill="white" transform="matrix(-1 0 0 -1 12 12.6592)"/>
+                      </clipPath>
+                    </defs>
+                  </svg>
+    <div class="mobile-burger-menu__languages">
+    <div class="mobile-burger-menu__language">
+       Русский 
     </div>
-
-    <ul class="mobile-burger-menu-social">
-        <li class="mobile-burger-menu-social-li">
-            <img src="/image/Phone_black.svg" alt="" class="social-li__img">
+    <div class="mobile-burger-menu__language">
+            English
+        </div>
+    </div>
+            </div>
         </li>
-        <li class="mobile-burger-menu-social-li">
-
-            <img src="/image/Facebook_black.svg" alt="" class="social-li__img">
-        </li>
-        <li class="mobile-burger-menu-social-li">
-
-            <img src="/image/Youtube_black.svg" alt="" class="social-li__img">
-        </li>
-        <li class="mobile-burger-menu-social-li">
-
-            <img src="/image/Instagram_black.svg" alt="" class="social-li__img">
-        </li>
-        <li class="mobile-burger-menu-social-li">
-
-            <img src="/image/Telegram_black.svg" alt="" class="social-li__img">
-        </li>
-    </ul>
-</div> -->
+        </ul>
+</div>
     <section class="section section-main">
         <div class="container">
-            <header class="header flex-center">
+            <header class="header flex-center" id="header">
                 <div class="header-menu flex-center">
                     <div class="header-menu__button" id="burger-menu">
+                        <span></span>
+                    </div>
+                    <div class="header-menu__button1" id="burger-menus">
                         <span></span>
                     </div>
                     <nav class="header-menu__list">
@@ -307,10 +301,10 @@
                         </div>
 
                         <div class="explore-description">
-                            <ul class="explore-list active" id="minimum">
+                            <ul class="explore-list active a" id="minimum">
                                 <li>
-                                    <span class="violet">CPU</span>: Intel i5-2500k (4 core 3.3
-                                    GHz) or AMD Ryzen 3 1200 (4 core 3.1 GHz)
+                                    <span class="violet">CPU</span>: Intel i5-2500k  
+                                     or AMD Ryzen 3 1200  
                                   </li>
                                   <li><span class="violet">RAM</span>: 8 GB</li>
                                   <li><span class="violet">OS</span>: Windows 10 64-bit</li>
