--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
               <div class="footer-year">2022</div>
               <div class="footer-rights">
                 Developed by
-                <a href="https://www.youtube.com/c/Tomkovich">Tomkovich</a>. All
+                <a href="#">Exohspoer</a>. All
                 rights reserved
               </div>
         </div>
